Final commit for this milestone

--- a/Ms_2.Rmd
+++ b/Ms_2.Rmd
@@ -18,7 +18,7 @@ However, this project does leave me wanting a little more. For example, it's a l
 
 **Second Project: "Fatalities in Yemen’s Civil War" by Liz Masten**
 
-The second project I looked at caught my eye because I did a final project on the Civil War in Yemen last semester using GIS technology, and I think this dataset that Liz used would've probably been super helpful. I think the biggest pros of the project are that it flows really well, it effectively communicates a TON of data, it shows that data really well on a map, and it's able to back up the visualizations with a deep explanation of the methodology behind it and an analysis of the different terms / actors that the project covers. 
+The second project I looked at caught my eye because I did a final project on the Civil War in Yemen last semester using GIS software, and I think this dataset that Liz used would've probably been super helpful. I think the biggest pros of the project are that it flows really well, it effectively communicates a TON of data, it shows that data really well on a map, and it's able to back up the visualizations with a deep explanation of the methodology behind it and an analysis of the different terms / actors that the project covers. 
 
 That said, I think some of the figures look smushed on my browser, so I'm not sure if they didn't knit well or something. Also, according to the Methodology section she included the Houthi rebel forces in the "Yemeni Government" category, which to me seems wrong because the insurgent Houthis are fighting *against* the Royal Government forces. I also get a little nervous when the project creator attaches fatality correlations to certain groups, because I think it could be used to justify criticizing one group over another when the data is likely incomplete and could mislead third party decision-makers in trying to place blame. Overall, I think this is a really cool project and I'm glad Liz took on such a complex and difficult topic with a large (probably unwieldy) dataset. 
 
